edit components
